--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@auth/core": "^0.41.0",
+    "@gsap/react": "^2.1.2",
+    "@react-spring/web": "^10.0.3",
     "@react-three/drei": "^10.0.0",
     "@react-three/fiber": "^9.0.0",
     "@react-three/postprocessing": "^3.0.4",
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.0.0",
+    "gsap": "^3.14.2",
     "next": "^15.2.0",
     "next-auth": "^5.0.0-beta.30",
     "postprocessing": "^6.38.3",
