--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arwes/react": "^1.0.0-next.25020502",
     "@auth/core": "^0.41.0",
+    "@emotion/react": "^11.14.0",
     "@gsap/react": "^2.1.2",
     "@react-spring/web": "^10.0.3",
     "@react-three/drei": "^10.0.0",
@@ -18,6 +20,7 @@
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.0.0",
     "gsap": "^3.14.2",
+    "motion": "^10.18.0",
     "next": "^15.2.0",
     "next-auth": "^5.0.0-beta.30",
     "postprocessing": "^6.38.3",
